<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_menu_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.srepollock.goodgists.MenuScreen">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menuAppName"
        android:textSize="52sp"
        android:textColor="?attr/colorButtonNormal"
        android:textAlignment="textStart"
        android:layout_above="@+id/tableLayout"
        android:layout_centerHorizontal="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/menuSearchRow" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/menuSearchButton"
                android:elevation="0dp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:text="@string/menu_search"
                android:textAlignment="viewStart"
                android:onClick="searchScreen"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/menuGistRow" >

            <Button
                android:text="@string/menu_gist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menuGistButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textAlignment="textStart"
                android:onClick="myGistsScreen" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/menuStarRow" >

            <Button
                android:text="@string/menu_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menuStarButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textAlignment="textStart"
                android:onClick="starredScreen" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/menuAccountRow" >

            <Button
                android:text="@string/menu_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menuAccountButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textAlignment="textStart"
                android:onClick="accountScreen" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/menuLogoutRow">

            <Button
                android:text="@string/menu_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menuLogoutButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textAlignment="textStart"
                android:onClick="logoutScreen" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/menuLoginRow" >

            <Button
                android:text="@string/menu_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/menuLoginButton"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textAlignment="textStart"
                android:onClick="loginScreen" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
